--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,15 @@ include(CMakeCMacros)
 include(GNUInstallDirs)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(ZMQ REQUIRED libzmq>=4.0)
+pkg_check_modules(MCDEP REQUIRED nacs-utils>=2.1 libzmq>=4.0)
 
 # Remove rdynamic
 set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 
 add_definitions(-Wall -Wextra -g -pthread -fvisibility=hidden
-  -fno-math-errno -Wconversion -Wno-sign-conversion ${ZMQ_CFLAGS})
-include_directories(${ZMQ_INCLUDE_DIRS})
+  -fno-math-errno -Wconversion -Wno-sign-conversion ${MCDEP_CFLAGS})
+include_directories(${MCDEP_INCLUDE_DIRS})
 
 set(LINKER_FLAGS -Wl,--as-needed -Wl,--no-undefined -Wl,--gc-sections
   -pthread -fno-math-errno)
@@ -28,3 +28,5 @@ cmake_c_add_flags(CMAKE_EXE_LINKER_FLAGS ${LINKER_FLAGS})
 cmake_c_add_flags(CMAKE_STATIC_LINKER_FLAGS ${LINKER_FLAGS})
 cmake_c_add_flags(CMAKE_SHARED_LINKER_FLAGS ${LINKER_FLAGS})
 cmake_c_add_flags(CMAKE_MODULE_LINKER_FLAGS ${LINKER_FLAGS})
+
+add_subdirectory(lib)
