[lib] always enable controller.cpp, use compiler feature to automatically enable/disable nacs-kernel support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ include(CMakeCMacros)
 include(GNUInstallDirs)
 
 find_package(PkgConfig REQUIRED)
-option(DUMMY_BACKEND_ONLY "Only enable the dummy backend. Useful for compiling on x86." Off)
 set(MCDEP_PKGS nacs-utils>=7.2 libzmq>=4.0)
-if(NOT DUMMY_BACKEND_ONLY)
+pkg_check_modules(NACS_KERNEL nacs-kernel)
+if(NACS_KERNEL_FOUND)
   set(MCDEP_PKGS ${MCDEP_PKGS} nacs-kernel)
 endif()
 pkg_check_modules(MCDEP REQUIRED ${MCDEP_PKGS})
