[lib] Make Controller a template that works on both the real and dummy pulser
Add factory function to create the controller.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ pkg_check_modules(MCDEP REQUIRED ${MCDEP_PKGS})
 set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 
-add_definitions(-Wall -Wextra -g -pthread -fvisibility=hidden
+add_definitions(-Wall -Wextra -g -pthread -faligned-new -fvisibility=hidden
   -fno-math-errno -Wconversion -Wno-sign-conversion ${MCDEP_CFLAGS})
 include_directories(${MCDEP_INCLUDE_DIRS})
 
