[test] [UNFINISHED] DDS DRG test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(test_controller libmolecube)
 
 add_executable(test_DDS test_DDS.cpp)
 target_link_libraries(test_DDS libmolecube)
+
+add_executable(test_DDS_ramp test_DDS_ramp.cpp)
+target_link_libraries(test_DDS_ramp libmolecube)
