--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,7 +9,7 @@ set(libmolecube_SRCS
 
 add_library(libmolecube SHARED ${libmolecube_SRCS})
 
-target_link_libraries(libmolecube ${MCDEP_LIBRARIES})
+target_link_libraries(libmolecube ${MCDEP_LIBRARIES} rt)
 
 set_target_properties(libmolecube PROPERTIES
   VERSION 0.1
