[cmake] suppress gcc warning about abi change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 
 add_definitions(-Wall -Wextra -g -pthread -faligned-new -fvisibility=hidden
+  -Wno-psabi -Wno-unknown-warning-option
   -fno-math-errno -Wconversion -Wno-sign-conversion ${MCDEP_CFLAGS})
 include_directories(${MCDEP_INCLUDE_DIRS} ${YAML_CPP_INCLUDE_DIR})
 
