[data] test and deploy config files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,4 +38,5 @@ cmake_c_add_flags(CMAKE_MODULE_LINKER_FLAGS ${LINKER_FLAGS})
 
 add_subdirectory(lib)
 add_subdirectory(server)
+add_subdirectory(data)
 add_subdirectory(test)
