[lib/server] set_startup request

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include(CMakeCMacros)
 include(GNUInstallDirs)
 
 find_package(PkgConfig REQUIRED)
-set(MCDEP_PKGS nacs-utils>=7.2 libzmq>=4.0)
+set(MCDEP_PKGS nacs-utils>=9.0 nacs-seq libzmq>=4.0)
 pkg_check_modules(NACS_KERNEL nacs-kernel)
 if(NACS_KERNEL_FOUND)
   set(MCDEP_PKGS ${MCDEP_PKGS} nacs-kernel)
