[test] initializing DDSs

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,9 @@ target_link_libraries(test_set_clock libmolecube)
 add_executable(test_set_dds test_set_dds.cpp)
 target_link_libraries(test_set_dds libmolecube)
 
+add_executable(test_init_dds test_init_dds.cpp)
+target_link_libraries(test_init_dds libmolecube)
+
 add_executable(test_controller test_controller.cpp)
 target_link_libraries(test_controller libmolecube)
 
