--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,3 +28,6 @@ target_link_libraries(test_DDS_ramp libmolecube)
 
 add_executable(test_DDS_full_ramp test_DDS_full_ramp.cpp)
 target_link_libraries(test_DDS_full_ramp libmolecube)
+
+add_executable(test_sequence test_sequence.cpp)
+target_link_libraries(test_sequence libmolecube)
